# excited-workflow

./: .gitignore  README.md  carbon_tracker_workflow.ipynb  convert_models_to_onnx.ipynb  demo_land_cover_regridding.ipynb  excited_fluxnet.py  exploration_carbontracker_model.ipynb  mkdocs.yml  preprocess_ERA5_sites.ipynb  preprocess_ameriflux.ipynb  produce_fluxnet_dataset.ipynb  pyproject.toml  read_site_csv.ipynb  readthedocs.yaml  reproduce_thesis.ipynb  requirements.txt  test_ct.ipynb  train_carbontracker_model.ipynb  train_fluxnet_models.ipynb  training_a_model.ipynb  workflow_carbon_tracker.ipynb  workflow_carbontracker.ipynb  workflow_fluxnet.ipynb  workflow_landcover.ipynb  workflow_monthlynee.ipynb  workflow_produce_carbontracker_dataset.ipynb
.github/workflows/: lint_format.yml
docs/: index.md  input_data.md  system_setup.md  workflow_notebooks.md
docs/notebooks/: preprocess_ERA5_sites.ipynb  preprocess_ameriflux.ipynb  produce_carbontracker_dataset.ipynb  produce_fluxnet_dataset.ipynb  train_carbontracker_model.ipynb  train_fluxnet_models.ipynb
docs/stylesheets/: extra.css
src/: biomass.py  carbontracker.py  generate_training_data.py  land_cover.py  modis.py  process_fluxnet.py  spei.py  utils.py
src/excited_workflow/: __init__.py  biomass.py  carbon_tracker.py  carbontracker.py  common_utils.py  config.py  extract_era5_site_data.py  fluxnet_site_extraction.py  land_cover.py  monthly_nee.py  process_fluxnet.py  produce_carbontracker_dataset.py  produce_fluxnet_dataset.py  protocol.py  spei.py  train_carbon_tracker.py  train_carbontracker_model.py  train_fluxnet_models.py  traintest.py  utils.py
src/excited_workflow/source_datasets/: __init__.py  biomass.py  era5.py  land_cover.py  modis.py  protocol.py  spei.py
src/excited_workflow/train_models/: carbon_tracker.py
thesis_notebooks/: Notebook_1.ipynb  Notebook_10.ipynb  Notebook_2.ipynb  Notebook_3.ipynb  Notebook_4.R  Notebook_5.ipynb  Notebook_6.ipynb  Notebook_7.R  Notebook_8.ipynb  Notebook_9.R  site_locations.txt
